# sft-nix

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: test.yml
src/sft_nix/: __init__.py  _overrides.py  hooks.py
tests/: test_nix_overrides.py
