[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sft-nix"
version = "0.1.0"
description = "Nix environment plugin for sft — .envrc detection, flake syncing, nix develop wrapping"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "pulcerto", email = "pulcerto@users.noreply.github.com" }]
dependencies = ["sft"]
keywords = ["sft", "nix", "nixos", "flake", "devshell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/StarsInDmajor/sft-nix"
Repository = "https://github.com/StarsInDmajor/sft-nix"
Issues = "https://github.com/StarsInDmajor/sft-nix/issues"

[project.entry-points."sft.plugins"]
nix = "sft_nix.hooks"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/sft_nix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
